force-app/main/default/objects/Cost__c/fields/AccommodationNumberPassengers__c.field-meta.xml
<CustomField>
    <fullName>AccommodationNumberPassengers__c</fullName>
    <description>QCC: No.Of Passengers Accommodated</description>
    <label>Accommodation - Number Passengers</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>