force-app/main/default/objects/Cost__c/fields/AccommodationNumberRooms__c.field-meta.xml
<CustomField>
    <fullName>AccommodationNumberRooms__c</fullName>
    <description>QCC: Number of rooms provided for Accomodation</description>
    <label>Accommodation - Number Rooms</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>