force-app/main/default/objects/Cost__c/fields/AccommodationProvided__c.field-meta.xml
<CustomField>
    <fullName>AccommodationProvided__c</fullName>
    <description>QCC: Has Accommodation Provided to Passenger</description>
    <label>Accommodation Provided</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>