force-app/main/default/objects/Cost__c/fields/AirportRefreshmentAmount__c.field-meta.xml
<CustomField>
    <fullName>AirportRefreshmentAmount__c</fullName>
    <description>QCC: Stores the Amount Spend on  Airport Refreshment Amount (AUD per PAX) in AUD Per passenger</description>
    <label>Airport Refreshment Amount (AUD per PAX)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>