force-app/main/default/objects/Cost__c/fields/FlightEvent__c.field-meta.xml
<CustomField>
    <fullName>FlightEvent__c</fullName>
    <description>QCC: Master Detail Relationship</description>
    <label>Flight Event</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Costs</relationshipLabel>
    <relationshipName>Recovery_Expenses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>