force-app/main/default/objects/Cost__c/fields/HotelMealNumberPassengers__c.field-meta.xml
<CustomField>
    <fullName>HotelMealNumberPassengers__c</fullName>
    <description>QCC: No. Of Passenger Provide with the Meal Vouchers</description>
    <label>Hotel Meal - Number Passengers</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>