force-app/main/default/objects/Cost__c/fields/IFEVouchersAllowance__c.field-meta.xml
<CustomField>
    <fullName>IFEVouchersAllowance__c</fullName>
    <description>QCC: Cost of IFE Vouchers Allowance (AUD per passenger)</description>
    <label>IFE Vouchers Allowance (AUD per PAX)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>