force-app/main/default/objects/Cost__c/fields/IFEVouchersNumberPassengers__c.field-meta.xml
<CustomField>
    <fullName>IFEVouchersNumberPassengers__c</fullName>
    <description>QCC: No. OF IFE Vouchers  provide for passengers</description>
    <label>IFE Vouchers - Number Passengers</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>