force-app/main/default/objects/Cost__c/fields/IFEVouchersProvided__c.field-meta.xml
<CustomField>
    <fullName>IFEVouchersProvided__c</fullName>
    <description>QCC: Has IFE Vouchers Provided</description>
    <label>IFE Vouchers Provided</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>