force-app/main/default/objects/Cost__c/fields/QFFPoints__c.field-meta.xml
<CustomField>
    <fullName>QFFPoints__c</fullName>
    <description>QCC: Points Provided for Each passenger</description>
    <label>QFF Points  (Points per PAX)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>