force-app/main/default/objects/Cost__c/fields/QFFPointsNumberPassengers__c.field-meta.xml
<CustomField>
    <fullName>QFFPointsNumberPassengers__c</fullName>
    <description>QCC: No. Of Passenger Received the QFF points</description>
    <label>QFF Points - Number Passengers</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>