force-app/main/default/objects/Cost__c/fields/TaxiVoucherAmount__c.field-meta.xml
<CustomField>
    <fullName>TaxiVoucherAmount__c</fullName>
    <description>QCC: Per Taxi Voucher Cost</description>
    <label>Taxi Voucher Amount (AUD per PAX)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>