force-app/main/default/objects/Cost__c/fields/TaxiVouchersNumberVouchers__c.field-meta.xml
<CustomField>
    <fullName>TaxiVouchersNumberVouchers__c</fullName>
    <description>QCC:  No.Of Taxi Bouchers provided to Passenger</description>
    <label>Taxi Vouchers - Number Vouchers</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>