force-app/main/default/objects/Cost__c/fields/TaxiVouchersProvided__c.field-meta.xml
<CustomField>
    <fullName>TaxiVouchersProvided__c</fullName>
    <description>QCC: Has Taxi Vouchers Provided for passengers</description>
    <label>Taxi Vouchers Provided</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>