force-app/main/default/objects/Cost__c/fields/Total_Recovery_Points__c.field-meta.xml
<CustomField>
    <fullName>Total_Recovery_Points__c</fullName>
    <label>Total Recovery Points</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>