force-app/main/default/objects/Cost__c/fields/TotalAmountSpent__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountSpent__c</fullName>
    <description>QCC: Total Amount Spent</description>
    <formula>TotalAccommodationCost__c + TotalAirportRefreshmentCost__c + TotalHotelMealCost__c + TotalHotelTransportCost__c + TotalIFEVoucherCost__c + TotalPointsCost__c + TotalTaxiVoucherCost__c+ Total_Recovery_Points_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount Spent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>