force-app/main/default/objects/Cost__c/fields/TotalHotelMealCost__c.field-meta.xml
<CustomField>
    <fullName>TotalHotelMealCost__c</fullName>
    <description>QCC: Total Amount spent on Meal Vouchers</description>
    <formula>HotelMealNumberPassengers__c * HotelMealAllowance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Hotel Meal Cost (AUD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>