force-app/main/default/objects/Cost__c/fields/TotalIFEVoucherCost__c.field-meta.xml
<CustomField>
    <fullName>TotalIFEVoucherCost__c</fullName>
    <description>QCC: Total Amount Spent on IFE</description>
    <formula>IFEVouchersNumberPassengers__c * IFEVouchersAllowance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total IFE Voucher Cost (AUD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>