force-app/main/default/objects/Cost__c/fields/TotalPointsCost__c.field-meta.xml
<CustomField>
    <fullName>TotalPointsCost__c</fullName>
    <description>QCC: Total Amount spent on QFF points</description>
    <formula>0.01* QFFPoints__c * QFFPointsNumberPassengers__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Points Cost(AUD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>