force-app/main/default/objects/Cost__c/fields/TotalTaxiVoucherCost__c.field-meta.xml
<CustomField>
    <fullName>TotalTaxiVoucherCost__c</fullName>
    <description>QCC: Total Taxi Voucher Cost (AUD) spend for the Event</description>
    <formula>TaxiVoucherAmount__c * TaxiVouchersNumberVouchers__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Taxi Voucher Cost (AUD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>