force-app/main/default/objects/Cost__c/recordTypes/QCC_Delay_Costs.recordType-meta.xml
<RecordType>
    <fullName>QCC_Delay_Costs</fullName>
    <active>true</active>
    <description>QCC: Events Delay Costs</description>
    <label>Delay Costs</label>
</RecordType>